--- a/design-verification/_quarto.yml
+++ b/design-verification/_quarto.yml
@@ -2,13 +2,35 @@ project:
   type: book
 
 book:
-  title: "Empty Book Template"
+  title: "Design Verification"
   author: "Ryan Hou"
-  date: "mm/dd/year"
+  date: "02/18/2025"
   chapters:
     - index.qmd
     - intro.qmd
+    - verif-basic.qmd
+    - verif-testbench.qmd
+    - verif-coverage.qmd
+    - verilog-data-types.qmd
+    - verilog-constructs.qmd
+    - verilog-behav.qmd
+    - verilog-gate.qmd
+    - verilog-examples
+    - sv-data-types.qmd
+    - sv-class.qmd
+    - sv-interface.qmd
+    - sv-constraint.qmd
+    - sv-tb.qmd
+    - uvm-sequences.qmd
+    - uvm-tb-comp.qmd
+    - uvm-tlm.qmd
+    - uvm-reg-model.qmd
+    - uvm-tb.qmd
     - summary.qmd
+    - questions-fundamentals.qmd
+    - questions-verilog.qmd
+    - questions-sv.qmd
+    - questions-uvm.qmd
     - references.qmd
 
 bibliography: references.bib
