--- a/cmos-vlsi/_quarto.yml
+++ b/cmos-vlsi/_quarto.yml
@@ -2,9 +2,9 @@ project:
   type: book
 
 book:
-  title: "Empty Book Template"
+  title: "CMOS VLSI Notebook"
   author: "Ryan Hou"
-  date: "mm/dd/year"
+  date: "02/20/2025"
   chapters:
     - index.qmd
     - intro.qmd
